--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "start": "vite",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "serve": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
+    "json-server": "^0.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
